test/spec_vectors/select/fail/module_2.wat
(module (func $arity-0 (select (result) (nop) (nop) (i32.const 1))))